resolved spacing issue

--- a/src/scss/Components/_testimonial.scss
+++ b/src/scss/Components/_testimonial.scss
@@ -3,7 +3,7 @@
   // background-image: url("../../images/testimonial.png");
   // background-image: url("~images/testimonial.png");
   height: auto;
-  margin-top: 100px;
+  margin-top: 20px;
   padding-top: 52px;
 
   .navigation-icon {
